--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
-      - name: Perform phpunit tests
-        uses: ./containers/phpunit
+      - name: Perform php tests
+        uses: ./containers/run_php_tests
   code_style:
     name: Code Style Analysis
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@master
-      - name: Analyze code style
-        uses: ./containers/phpcs
+      - name: Check code style
+        uses: ./containers/run_php_codesniffer
