--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     },
     "require-dev": {
         "danack/coding-standard": "0.1.0",
+        "infection/infection": "^0.15.3",
         "phpunit/phpunit": "9.0.1",
         "slevomat/coding-standard": "^4.8.4",
         "squizlabs/php_codesniffer": "^3.3.1",
@@ -21,7 +22,7 @@
     },
     "autoload": {
         "files": [
-            "src/functions.php"
+            "src/Convert/functions.php"
         ],
         "psr-0": {
             "Convert": [
