--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,7 +1,7 @@
 parameters:
   bootstrap: null
   autoload_files:
-    - src/functions.php
+    - src/Convert/functions.php
   excludes_analyse:
 #    - *lib/birke/*
 #    - *injectionParams/*
