--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
       "ext-json": "*",
+      "php" : "^7.4",
       "seld/jsonlint": "^1.7.2"
     },
     "require-dev": {
